<resources>
    <string name="app_name">VulnaBank</string>
    <string name="server_url">http://api.vulnabank.com:9999</string>
    <string name="server_url_ssl">https://api.vulnabank.com:9998</string>
    <string name="fgyozo_linkedin">https://www.linkedin.com/in/füle-győző-a5a54380/</string>
    <string name="zsombor_linkedin">https://www.linkedin.com/in/zsomborkovacs/</string>
    <string name="timur_linkedin">https://www.linkedin.com/in/timurx/</string>
    <string name="defdeveu_web">https://defdev.eu/</string>
    <string name="no_transactions">Not available transactions</string>
    <string name="login">Login</string>
    <string name="password">password</string>
    <string name="re_enter_password">re-enter password</string>
    <string name="register">Register</string>
    <string name="settings">Settings</string>
    <string name="about">About</string>
    <string name="transactions">Transactions</string>
    <string name="change_password">change password</string>
    <string name="tls_verification_enabled">TLS verification enabled</string>
    <string name="new_password">new password</string>
    <string name="password_change_done">Password change -> done</string>
    <string name="start_transaction">Start money send transaction</string>
    <string name="recipient_name">Recipient name</string>
    <string name="account_number">Account number</string>
    <string name="comment">Comment</string>
    <string name="amount">Amount</string>
    <string name="success">Successful transaction</string>
    <string name="fail">Failed transaction</string>
    <string name="name_error">Minimum 1 character</string>
    <string name="account_number_error">Minimum 8 numbers</string>
    <string name="amount_error">Minimum 1</string>
    <string name="delete_title">Delete transaction</string>
    <string name="delete_message">Do you really want to delete transaction: %s</string>
    <string name="please_wait">Please wait …</string>
    <string name="tls_change_restart_notification">This setting require you to restart the application for its change to take effect.</string>
    <string name="application_version">Application version %s</string>
    <string name="contributors">Contributors</string>
    <string name="copyright">Ⓒ defdeveu</string>
    <string name="gyozo_fule">Gyozo Fule</string>
    <string name="zsombor_kovacs">Zsombor Kovacs</string>
    <string name="timur_krothko">Timur Krothko</string>
    <string name="app_info">App info</string>


</resources>
