<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingTop="@dimen/doublePadding">

    <TextView
        android:textAppearance="@style/TextAppearance.AppCompat.Medium"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:textStyle="bold"
        android:layout_marginTop="@dimen/simplePadding"
        android:text="@string/app_info"/>

    <TextView
        android:textAppearance="@style/TextAppearance.AppCompat.Medium"
        android:id="@+id/appVersion"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/simplePadding"
        android:gravity="center"
        android:text="@string/application_version"/>

    <TextView
        android:textAppearance="@style/TextAppearance.AppCompat.Medium"
        android:id="@+id/copyright"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:clickable="true"
        android:focusable="true"
        android:textColor="@android:color/holo_blue_dark"
        android:gravity="center"
        android:text="@string/copyright"/>

    <TextView
        android:textAppearance="@style/TextAppearance.AppCompat.Medium"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:textStyle="bold"
        android:layout_marginTop="@dimen/quadPadding"
        android:text="@string/contributors"/>

    <TextView
        android:textAppearance="@style/TextAppearance.AppCompat.Medium"
        android:id="@+id/firstContributor"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:clickable="true"
        android:focusable="true"
        android:textColor="@android:color/holo_blue_dark"
        android:layout_marginTop="@dimen/doublePadding"
        android:text="@string/gyozo_fule" />

    <TextView
        android:textAppearance="@style/TextAppearance.AppCompat.Medium"
        android:id="@+id/secondContributor"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:clickable="true"
        android:focusable="true"
        android:gravity="center"
        android:textColor="@android:color/holo_blue_dark"
        android:layout_marginTop="@dimen/doublePadding"
        android:text="@string/zsombor_kovacs"/>

    <TextView
        android:textAppearance="@style/TextAppearance.AppCompat.Medium"
        android:id="@+id/thirdContributor"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:clickable="true"
        android:focusable="true"
        android:gravity="center"
        android:textColor="@android:color/holo_blue_dark"
        android:layout_marginTop="@dimen/doublePadding"
        android:text="@string/timurxyz"/>
</LinearLayout>